Log in and sign Up design done

--- a/src/styles/globals.css
+++ b/src/styles/globals.css
@@ -3,5 +3,9 @@
 @tailwind utilities;
 
 body {
-  @apply bg-gray-200;
+  background-color: #c7c7c7;
 }
+
+/* .input {
+  @apply block rounded-md px-6 pt-6 pb-1 w-full text-md text-white bg-neutral-700 appearance-none focus:outline-none focus:ring-0 peer invalid:border-b-1;
+} */
